--- a/package.json
+++ b/package.json
@@ -11,22 +11,35 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
-    "@hookform/resolvers": "^3.6.0",
+    "@hookform/resolvers": "^3.9.0",
     "@monaco-editor/react": "^4.6.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "firebase": "^10.14.1",
     "formik": "^2.4.6",
+    "framer-motion": "^11.3.19",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.397.0",
     "match-sorter": "^6.3.4",
     "monaco-editor": "^0.50.0",
+    "next-auth": "^4.24.8",
     "node": "^22.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.52.0",
+    "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.23.1",
+    "roughjs": "^4.6.6",
     "socket.io-client": "^4.7.5",
     "sort-by": "^1.2.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "use-sound": "^4.0.1",
     "uuid": "^10.0.0",
     "y-monaco": "^0.1.5",
@@ -35,6 +48,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/node": "^20.14.9",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
